examples/shop/payment/app-repo/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: payment
  labels:
    istio.io/rev: asm-managed
