examples/shop/payment/app-repo/k8s/base/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
    name: payment-virtualservice
    namespace: payment
spec:
    hosts:
    - payment.payment.svc.cluster.local
    http:
    - route:
      - destination:
          host: payment
          port:
            number: 50051
